// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть корректные данные для события просмотра страницы для Метрики 1`] = `
Object {
  "detail": Object {
    "products": Array [
      Object {
        "brand": "Volkswagen",
        "category": "cars",
        "id": "volkswagen-amarok-1085612756",
        "name": "Amarok",
        "price": 1050000,
      },
    ],
  },
}
`;

exports[`должен вернуть корректные данные для события просмотра телефона для Метрики 1`] = `
Object {
  "purchase": Object {
    "actionField": Object {
      "id": 1551175993000,
      "revenue": 50,
    },
    "products": Array [
      Object {
        "brand": "Volkswagen",
        "category": "cars",
        "id": "volkswagen-amarok-1085612756",
        "name": "Amarok",
        "price": 1050000,
      },
    ],
  },
}
`;
